fix tspconfig for java

--- a/specification/redis/Cache.Management/tspconfig.yaml
+++ b/specification/redis/Cache.Management/tspconfig.yaml
@@ -18,11 +18,10 @@ options:
     generate-sample: true
     flavor: "azure"
   "@azure-tools/typespec-java":
-    package-dir: "azure-resourcemanager-redis"
-    namespace: "com.azure.resourcemanager.redis"
+    service-dir: "sdk/resourcemanager"
+    emitter-output-dir: "{output-dir}/{service-dir}/azure-resourcemanager-redis"
     service-name: "Redis" # human-readable service name, whitespace allowed
     premium: true
-    service-dir: "sdk/resourcemanager"
     enable-sync-stack: false
     remove-inner: OperationStatusResult
     use-object-for-unknown: true
