--- a/specification/redis/Cache.Management/tspconfig.yaml
+++ b/specification/redis/Cache.Management/tspconfig.yaml
@@ -20,6 +20,7 @@ options:
   "@azure-tools/typespec-java":
     service-dir: "sdk/resourcemanager"
     emitter-output-dir: "{output-dir}/{service-dir}/azure-resourcemanager-redis"
+    namespace: "com.azure.resourcemanager.redis"
     service-name: "Redis" # human-readable service name, whitespace allowed
     premium: true
     enable-sync-stack: false
