--- a/specification/redis/Cache.Management/tspconfig.yaml
+++ b/specification/redis/Cache.Management/tspconfig.yaml
@@ -6,10 +6,9 @@ emit:
 options:
   "@azure-tools/typespec-autorest":
     omit-unreachable-types: true
-    emitter-output-dir: "{project-root}"
+    emitter-output-dir: "{project-root}/.."
     azure-resource-provider-folder: "resource-manager"
-    output-file: "{version-status}/{version}/redis.json"
-    arm-types-dir: "{project-root}/../../../../common-types/resource-management"
+    output-file: "{azure-resource-provider-folder}/{service-name}/{version-status}/{version}/redis.json"
     examples-dir: "{project-root}/examples"
     emit-lro-options: "all"
   "@azure-tools/typespec-python":
