--- a/specification/redis/Cache.Management/tspconfig.yaml
+++ b/specification/redis/Cache.Management/tspconfig.yaml
@@ -18,11 +18,11 @@ options:
     generate-sample: true
     flavor: "azure"
   "@azure-tools/typespec-java":
-    service-dir: "sdk/resourcemanager"
     package-dir: "azure-resourcemanager-redis"
     namespace: "com.azure.resourcemanager.redis"
     service-name: "Redis" # human-readable service name, whitespace allowed
     premium: true
+    service-dir: "sdk/resourcemanager"
     enable-sync-stack: false
     remove-inner: OperationStatusResult
     use-object-for-unknown: true
@@ -35,8 +35,8 @@ options:
       name: "@azure/arm-rediscache"
   "@azure-tools/typespec-go":
     service-dir: "sdk/resourcemanager/redis"
-    emitter-output-dir: "{output-dir}/{service-dir}/armredis"
-    module: "github.com/Azure/azure-sdk-for-go/{service-dir}/armredis"
+    package-dir: "armredis"
+    module: "github.com/Azure/azure-sdk-for-go/{service-dir}/{package-dir}"
     fix-const-stuttering: false
     flavor: "azure"
     generate-samples: true
