--- a/specification/redis/Cache.Management/tspconfig.yaml
+++ b/specification/redis/Cache.Management/tspconfig.yaml
@@ -5,12 +5,19 @@ emit:
   - "@azure-tools/typespec-autorest"
 options:
   "@azure-tools/typespec-autorest":
+    use-read-only-status-schema: true
     omit-unreachable-types: true
-    emitter-output-dir: "{project-root}/.."
+    emitter-output-dir: "{project-root}"
+    output-file: "{version-status}/{version}/redis.json"
     azure-resource-provider-folder: "resource-manager"
-    output-file: "{azure-resource-provider-folder}/{service-name}/{version-status}/{version}/redis.json"
+    arm-types-dir: "{project-root}/../../../../common-types/resource-management"
     examples-dir: "{project-root}/examples"
-    emit-lro-options: "all"
+#    omit-unreachable-types: true
+#    emitter-output-dir: "{project-root}/"
+#    azure-resource-provider-folder: "resource-manager"
+#    output-file: "{azure-resource-provider-folder}/{service-name}/{version-status}/{version}/redis.json"
+#    examples-dir: "{project-root}/examples"
+#    emit-lro-options: "all"
   "@azure-tools/typespec-python":
     package-dir: "azure-mgmt-redis"
     namespace: "azure.mgmt.redis"
