--- a/specification/orbital/Microsoft.PlanetaryComputer/tspconfig.yaml
+++ b/specification/orbital/Microsoft.PlanetaryComputer/tspconfig.yaml
@@ -28,13 +28,8 @@ options:
       name: "@azure-rest/planetarycomputer"
     flavor: azure
   "@azure-tools/typespec-java":
-    package-dir: "azure-analytics-planetary-computer"
+    package-dir: "azure-planetarycomputer"
     namespace: com.azure.planetarycomputer
-    partial-update: true
-    use-eclipse-language-server: false
-    enable-subclient: true
-    generate-samples: false
-    generate-tests: false
     flavor: azure
   # "@azure-tools/typespec-go":
   #   module: "github.com/Azure/azure-sdk-for-go/{service-dir}/{package-dir}"
