--- a/specification/web/resource-manager/Microsoft.Web/stable/2024-11-01/WebApps.json
+++ b/specification/web/resource-manager/Microsoft.Web/stable/2024-11-01/WebApps.json
@@ -25749,13 +25749,13 @@
           "description": "If true, the error page will be shown for all requests with a matching status code, regardless of whether they failed on the App Service FrontEnd load balancer or on the app itself.",
           "type": "boolean"
         },
-        "SubstatusCode": {
+        "substatusCode": {
           "description": "The substatus code for which the error page will be used",
           "type": "integer",
           "format": "int32"
         },
-        "Name": {
-          "description": "The name of the error page. This is a read-only property.",
+        "name": {
+          "description": "The name of the error page. For example, '404' or 'maintenance'.",
           "type": "string",
           "readOnly": true
         }
