--- a/specification/certificateregistration/cspell.yaml
+++ b/specification/certificateregistration/cspell.yaml
@@ -35,14 +35,7 @@ words:
   - zilla
 overrides:
   - filename: >-
-      **/specification/web/resource-manager/Microsoft.DomainRegistration/DomainRegistration/stable/2015-04-01/Domains.json
-    words:
-      - availablility
-  - filename: >-
-      **/specification/web/resource-manager/Microsoft.DomainRegistration/DomainRegistration/stable/2018-02-01/Domains.json
-    words:
-      - availablility
-  - filename: >-
-      **/specification/domainregistration/resource-manager/Microsoft.DomainRegistration/**/CommonDefinitions.json
+      **/specification/certificateregistration/resource-manager/Microsoft.CertificateRegistration/**/CommonDefinitions.json
     words:
       - guage
+
