--- a/specification/domainregistration/cspell.yaml
+++ b/specification/domainregistration/cspell.yaml
@@ -37,10 +37,12 @@ overrides:
   - filename: >-
       **/specification/web/resource-manager/Microsoft.DomainRegistration/DomainRegistration/stable/2015-04-01/Domains.json
     words:
+      - availabilily
       - availablility
   - filename: >-
       **/specification/web/resource-manager/Microsoft.DomainRegistration/DomainRegistration/stable/2018-02-01/Domains.json
     words:
+      - availabilily
       - availablility
   - filename: >-
       **/specification/domainregistration/resource-manager/Microsoft.DomainRegistration/**/CommonDefinitions.json
