--- a/specification/devcenter/DevCenter.Management/tspconfig.yaml
+++ b/specification/devcenter/DevCenter.Management/tspconfig.yaml
@@ -42,7 +42,7 @@ options:
   "@azure-tools/typespec-go":
     service-dir: "sdk/resourcemanager/devcenter"
     package-dir: "armdevcenter"
-    emitter-output-dir: "{output-dir}/{service-dir}/devcenter/arm"
+    emitter-output-dir: "{output-dir}/{service-dir}devcenter/arm"
     module: "github.com/Azure/azure-sdk-for-go/{service-dir}/{package-dir}"
     fix-const-stuttering: true
     flavor: "azure"
