--- a/specification/keyvault/Security.KeyVault.Certificates/tspconfig.yaml
+++ b/specification/keyvault/Security.KeyVault.Certificates/tspconfig.yaml
@@ -50,10 +50,9 @@ options:
       description: "Azure Key Vault Certificates"
     flavor: azure
   "@azure-tools/typespec-go":
+    module: "github.com/Azure/azure-sdk-for-go/sdk/security/keyvault/azcertificates"
     service-dir: "sdk/security/keyvault"
     emitter-output-dir: "{output-dir}/{service-dir}/azcertificates"
-    module: "github.com/Azure/azure-sdk-for-go/{service-dir}/azcertificates"
-    override-client-name: "Client"
     single-client: true
     inject-spans: true
     generate-fakes: true
