--- a/specification/keyvault/Security.KeyVault.Secrets/tspconfig.yaml
+++ b/specification/keyvault/Security.KeyVault.Secrets/tspconfig.yaml
@@ -48,10 +48,9 @@ options:
       description: "Azure Key Vault Secrets"
     flavor: azure
   "@azure-tools/typespec-go":
+    module: "github.com/Azure/azure-sdk-for-go/sdk/security/keyvault/azsecrets"
     service-dir: "sdk/security/keyvault"
     emitter-output-dir: "{output-dir}/{service-dir}/azsecrets"
-    module: "github.com/Azure/azure-sdk-for-go/{service-dir}/azsecrets"
-    override-client-name: "Client"
     single-client: true
     inject-spans: true
     generate-fakes: true
