--- a/specification/suppressions.yaml
+++ b/specification/suppressions.yaml
@@ -48,6 +48,10 @@
     - keyvault/data-plane/Microsoft.KeyVault/preview/2026-01-01-preview/secrets.json
     - keyvault/data-plane/Microsoft.KeyVault/preview/2026-01-01-preview/securitydomain.json
     - keyvault/data-plane/Microsoft.KeyVault/preview/2026-01-01-preview/settings.json
+    - keyvault/data-plane/Microsoft.KeyVault/preview/2025-06-01-preview/keys.json
+    - keyvault/data-plane/Microsoft.KeyVault/preview/7.6-preview.2/keys.json
+    - keyvault/data-plane/Microsoft.KeyVault/stable/7.5/keys.json
+    - keyvault/data-plane/Microsoft.KeyVault/stable/7.6/keys.json
     - liftrneon/resource-manager/Neon.Postgres/preview/2024-08-01-preview/neon.json
     - liftrqumulo/resource-manager/Qumulo.Storage/preview/2022-06-27-preview/Qumulo.Storage.json
     - playwrighttesting/data-plane/Microsoft.PlaywrightTesting.AuthManager/preview/2023-10-01-preview/playwrighttesting.json
