--- a/specification/keyvault/data-plane/Microsoft.KeyVault/preview/2026-01-01-preview/settings.json
+++ b/specification/keyvault/data-plane/Microsoft.KeyVault/preview/2026-01-01-preview/settings.json
@@ -75,6 +75,11 @@
               "$ref": "#/definitions/KeyVaultError"
             }
           }
+        },
+        "x-ms-examples": {
+          "List account settings": {
+            "$ref": "./examples/ListSettings-example.json"
+          }
         }
       }
     },
@@ -103,6 +108,11 @@
             "schema": {
               "$ref": "#/definitions/KeyVaultError"
             }
+          }
+        },
+        "x-ms-examples": {
+          "Get key vault account setting": {
+            "$ref": "./examples/GetSetting-example.json"
           }
         }
       },
@@ -140,6 +150,11 @@
             "schema": {
               "$ref": "#/definitions/KeyVaultError"
             }
+          }
+        },
+        "x-ms-examples": {
+          "Update key vault account setting": {
+            "$ref": "./examples/UpdateSetting-example.json"
           }
         }
       }
