--- a/specification/redis/resource-manager/Microsoft.Cache/Redis/tspconfig.yaml
+++ b/specification/redis/resource-manager/Microsoft.Cache/Redis/tspconfig.yaml
@@ -23,7 +23,7 @@ options:
     namespace: "com.azure.resourcemanager.redis"
     service-name: "Redis" # human-readable service name, whitespace allowed
     premium: true
-    service-dir: "sdk/resourcemanager"
+    service-dir: "sdk/redis"
     enable-sync-stack: false
     remove-inner: OperationStatusResult
     use-object-for-unknown: true
