rollback typespec-go

--- a/specification/trafficmanager/TrafficManager.Management/tspconfig.yaml
+++ b/specification/trafficmanager/TrafficManager.Management/tspconfig.yaml
@@ -36,6 +36,7 @@ options:
     package-details:
       name: "@azure/arm-trafficmanager"
   "@azure-tools/typespec-go":
+    service-dir: "sdk/resourcemanager/trafficmanager"
     emitter-output-dir: "{output-dir}/{service-dir}/armtrafficmanager"
     module: "github.com/Azure/azure-sdk-for-go/{service-dir}/armtrafficmanager"
     fix-const-stuttering: true
