--- a/specification/migrate/resource-manager/suppressions.yaml
+++ b/specification/migrate/resource-manager/suppressions.yaml
@@ -5,3 +5,7 @@
 - tool: TagsAreNotAllowedForProxyResources
   path: Microsoft.Migrate/AssessmentProjects/preview/2023-05-01-preview/**/*.json
   reason: Adding this supression as this is a false positive alert
+
+- tool: DescriptionMustNotBeNodeName
+  path: Microsoft.Migrate/Waves/**/*.json
+  reason: Adding this supression as this is a false positive alert
