--- a/specification/ai/DocumentIntelligence/tspconfig.yaml
+++ b/specification/ai/DocumentIntelligence/tspconfig.yaml
@@ -55,7 +55,7 @@ options:
     flavor: azure
   "@azure-tools/typespec-ts":
     title: DocumentIntelligence
-    emitter-output-dir: "{output-dir}/{service-dir}/ai-document-intelligence-rest"
+    emitter-output-dir: "{cwd}/{service-dir}/ai-document-intelligence-rest"
     is-modular-library: false
     generate-metadata: true
     package-details:
