--- a/specification/ai/Face/tspconfig.yaml
+++ b/specification/ai/Face/tspconfig.yaml
@@ -31,7 +31,7 @@ options:
     namespace: Azure.AI.Vision.Face
     model-namespace: false
   "@azure-tools/typespec-ts":
-    emitter-output-dir: "{output-dir}/{service-dir}/ai-vision-face-rest"
+    emitter-output-dir: "{cwd}/{service-dir}/ai-vision-face-rest"
     generate-metadata: true
     is-modular-library: false
     flavor: azure
