--- a/specification/appconfiguration/data-plane/AppConfiguration/tspconfig.yaml
+++ b/specification/appconfiguration/data-plane/AppConfiguration/tspconfig.yaml
@@ -30,7 +30,7 @@ options:
     namespace: Azure.Data.AppConfiguration
     model-namespace: false
   "@azure-tools/typespec-ts":
-    emitter-output-dir: "{output-dir}/{service-dir}/azure-appconfiguration-rest"
+    emitter-output-dir: "{cwd}/{service-dir}/azure-appconfiguration-rest"
     generate-metadata: true
     is-modular-library: false
     package-details:
