--- a/specification/ai/ImageAnalysis/tspconfig.yaml
+++ b/specification/ai/ImageAnalysis/tspconfig.yaml
@@ -38,7 +38,7 @@ options:
     use-eclipse-language-server: false
     flavor: azure
   "@azure-tools/typespec-ts":
-    emitter-output-dir: "{output-dir}/{service-dir}/ai-vision-image-analysis-rest"
+    emitter-output-dir: "{cwd}/{service-dir}/ai-vision-image-analysis-rest"
     is-modular-library: false
     package-details:
       name: "@azure-rest/ai-vision-image-analysis"
