--- a/specification/ai/OpenAI.Assistants/tspconfig.yaml
+++ b/specification/ai/OpenAI.Assistants/tspconfig.yaml
@@ -44,7 +44,7 @@ options:
     custom-types: "FileListResponse,OpenAIPageableListOfAssistant,OpenAIPageableListOfRunStep,OpenAIPageableListOfThreadMessage,OpenAIPageableListOfThreadRun,OpenAIPageableListOfVectorStore,OpenAIPageableListOfVectorStoreFile,UploadFileRequest"
     flavor: azure
   "@azure-tools/typespec-ts":
-    emitter-output-dir: "{output-dir}/{service-dir}/openai"
+    emitter-output-dir: "{cwd}/{service-dir}/openai"
     generate-metadata: false
     is-modular-library: true
     package-details:
