--- a/specification/cdn/Cdn.Management/tspconfig.yaml
+++ b/specification/cdn/Cdn.Management/tspconfig.yaml
@@ -13,13 +13,13 @@ options:
     arm-resource-flattening: true
     emit-lro-options: "all"
   "@azure-tools/typespec-python":
-    package-dir: "azure-mgmt-cdn"
+    emitter-output-dir: "{output-dir}/{service-dir}/azure-mgmt-cdn"
     namespace: "azure.mgmt.cdn"
     generate-test: true
     generate-sample: true
     flavor: "azure"
   "@azure-tools/typespec-java":
-    package-dir: "azure-resourcemanager-cdn"
+    emitter-output-dir: "{output-dir}/{service-dir}/azure-resourcemanager-cdn"
     namespace: "com.azure.resourcemanager.cdn"
     service-name: "Cdn" # human-readable service name, whitespace allowed
     premium: true
@@ -28,7 +28,7 @@ options:
     flavor: azure
   "@azure-tools/typespec-ts":
     service-dir: sdk/cdn
-    package-dir: "arm-cdn"
+    emitter-output-dir: "{cwd}/{service-dir}/arm-cdn"
     is-modular-library: true
     flavor: "azure"
     experimental-extensible-enums: true
@@ -44,6 +44,10 @@ options:
     generate-fakes: true
     head-as-boolean: true
     inject-spans: true
+  "@azure-tools/typespec-csharp":
+    emitter-output-dir: "{output-dir}/{service-dir}/{namespace}"
+    clear-output-folder: true
+    namespace: "Azure.ResourceManager.Cdn"
 linter:
   extends:
     - "@azure-tools/typespec-azure-rulesets/resource-manager"
