update java rule and tsconfig

--- a/specification/storagesync/resource-manager/Microsoft.StorageSync/StorageSync/tspconfig.yaml
+++ b/specification/storagesync/resource-manager/Microsoft.StorageSync/StorageSync/tspconfig.yaml
@@ -16,7 +16,7 @@ options:
   "@azure-tools/typespec-python":
     service-dir: "sdk/storage"
     emitter-output-dir: "{output-dir}/{service-dir}/{namespace}"
-    namespace: "azure.mgmt.storagesync"
+    namespace: "azure-mgmt-storagesync"
     generate-test: true
     generate-sample: true
     flavor: "azure"
