--- a/specification/storagesync/resource-manager/Microsoft.StorageSync/StorageSync/tspconfig.yaml
+++ b/specification/storagesync/resource-manager/Microsoft.StorageSync/StorageSync/tspconfig.yaml
@@ -15,8 +15,8 @@ options:
     emit-lro-options: "all"
   "@azure-tools/typespec-python":
     service-dir: "sdk/storage"
-    emitter-output-dir: "{output-dir}/{service-dir}/{namespace}"
-    namespace: "azure-mgmt-storagesync"
+    emitter-output-dir: "{output-dir}/{service-dir}/azure-mgmt-storagesync"
+    namespace: "azure.mgmt.storagesync"
     generate-test: true
     generate-sample: true
     flavor: "azure"
