--- a/specification/workloads/Workloads.SAPVirtualInstance.Management/tspconfig.yaml
+++ b/specification/workloads/Workloads.SAPVirtualInstance.Management/tspconfig.yaml
@@ -14,7 +14,7 @@ options:
     arm-resource-flattening: true
     output-file: "{azure-resource-provider-folder}/{service-name}/SAPVirtualInstance/{version-status}/{version}/SAPVirtualInstance.json"
   "@azure-tools/typespec-csharp":
-    emitter-output-dir: "{output-dir}/{service-dir}/{namespace}"
+    emitter-output-dir: "{output-dir}/sdk/workloadssapvirtualinstance/{namespace}"
     flavor: azure
     clear-output-folder: true
     model-namespace: false
