revert ai project change

--- a/specification/suppressions.yaml
+++ b/specification/suppressions.yaml
@@ -90,8 +90,8 @@
   reason: Suppress until spec can be updated
   rules: [SdkTspConfigValidation]
   sub-rules:
-    - options.@azure-tools/typespec-go.flavor
-    - options.@azure-tools/typespec-java.namespace
+    - options.@azure-tools/typespec-go.*
+    - options.@azure-tools/typespec-csharp.*
   paths:
     - ai/Azure.AI.Projects/tspconfig.yaml
 
@@ -1233,7 +1233,6 @@
     - options.@azure-tools/typespec-go.*
   paths:
     - ai/Azure.AI.Agents/tspconfig.yaml
-    - ai/Azure.AI.Projects/tspconfig.yaml
     - ai/ContentUnderstanding/tspconfig.yaml
     - ai/DocumentIntelligence/tspconfig.yaml
     - ai/Face/tspconfig.yaml
