--- a/specification/purviewdatagovernance/Azure.Analytics.Purview.UnifiedCatalog/examples/2025-09-15-preview/CreateObjectiveAsync_MaximumSet_Gen.json
+++ b/specification/purviewdatagovernance/Azure.Analytics.Purview.UnifiedCatalog/examples/2025-09-15-preview/CreateObjectiveAsync_MaximumSet_Gen.json
@@ -3,7 +3,7 @@
   "operationId": "CreateObjectiveAsync",
   "parameters": {
     "api-version": "2025-09-15-preview",
-    "body": {
+    "objective": {
       "systemData": {
         "lastModifiedAt": "1970-01-01T00:00:00.000Z",
         "lastModifiedBy": "766BF2B9-5D8A-4FB1-B8D5-D30A53E22A9E",
