--- a/specification/keyvault/Security.KeyVault.Secrets/tspconfig.yaml
+++ b/specification/keyvault/Security.KeyVault.Secrets/tspconfig.yaml
@@ -51,6 +51,8 @@ options:
     module: "github.com/Azure/azure-sdk-for-go/sdk/security/keyvault/azsecrets"
     service-dir: "sdk/security/keyvault"
     emitter-output-dir: "{output-dir}/{service-dir}/azsecrets"
+    go-generate: build.go
+    api-version: "7.6"
     single-client: true
     inject-spans: true
     generate-fakes: true
