--- a/specification/keyvault/Security.KeyVault.Keys/tspconfig.yaml
+++ b/specification/keyvault/Security.KeyVault.Keys/tspconfig.yaml
@@ -52,6 +52,8 @@ options:
     module: "github.com/Azure/azure-sdk-for-go/sdk/security/keyvault/azkeys"
     service-dir: "sdk/security/keyvault"
     emitter-output-dir: "{output-dir}/{service-dir}/azkeys"
+    go-generate: build.go
+    api-version: "7.6"
     single-client: true
     inject-spans: true
     generate-fakes: true
