--- a/specification/keyvault/Security.KeyVault.Certificates/tspconfig.yaml
+++ b/specification/keyvault/Security.KeyVault.Certificates/tspconfig.yaml
@@ -53,6 +53,8 @@ options:
     module: "github.com/Azure/azure-sdk-for-go/sdk/security/keyvault/azcertificates"
     service-dir: "sdk/security/keyvault"
     emitter-output-dir: "{output-dir}/{service-dir}/azcertificates"
+    go-generate: build.go
+    api-version: "7.6"
     single-client: true
     inject-spans: true
     generate-fakes: true
