--- a/specification/keyvault/Security.KeyVault.BackupRestore/tspconfig.yaml
+++ b/specification/keyvault/Security.KeyVault.BackupRestore/tspconfig.yaml
@@ -28,6 +28,8 @@ options:
     containing-module: "github.com/Azure/azure-sdk-for-go/sdk/security/keyvault/azadmin"
     service-dir: "sdk/security/keyvault"
     emitter-output-dir: "{output-dir}/{service-dir}/azadmin/backup"
+    go-generate: build.go
+    api-version: "7.6"
     inject-spans: true
     single-client: true
     generate-fakes: true
