--- a/specification/keyvault/Security.KeyVault.Settings/tspconfig.yaml
+++ b/specification/keyvault/Security.KeyVault.Settings/tspconfig.yaml
@@ -28,6 +28,7 @@ options:
     containing-module: "github.com/Azure/azure-sdk-for-go/sdk/security/keyvault/azadmin"
     service-dir: "sdk/security/keyvault"
     emitter-output-dir: "{output-dir}/{service-dir}/azadmin/settings"
+    api-version: "7.6"
     inject-spans: true
     single-client: true
     generate-fakes: true
