--- a/specification/azurestackhci/AzureStackHCI.StackHCIVM.Management/tspconfig.yaml
+++ b/specification/azurestackhci/AzureStackHCI.StackHCIVM.Management/tspconfig.yaml
@@ -37,10 +37,12 @@ options:
     flavor: azure
   "@azure-tools/typespec-csharp":
     flavor: azure
-    package-dir: "Azure.ResourceManager.Hci.Vm"
+    emitter-output-dir: "{output-dir}/{service-dir}/Azure.ResourceManager.Hci.Vm"
     clear-output-folder: true
     model-namespace: true
-    namespace: "{package-dir}"
+    service-name: "Azure Stack Hci Vm"
+    namespace: "Azure.ResourceManager.Hci.Vm"
+    module: "github.com/Azure/azure-sdk-for-net/sdk/azurestackhci/Azure.ResourceManager.Hci.Vm"
   "@azure-tools/typespec-ts":
     experimental-extensible-enums: true
     package-dir: "arm-azurestackhcivm"
