Im a mediator between two linters who are angry at one another

--- a/specification/devcenter/DevCenter.Management/tspconfig.yaml
+++ b/specification/devcenter/DevCenter.Management/tspconfig.yaml
@@ -42,8 +42,8 @@ options:
   "@azure-tools/typespec-go":
     service-dir: "sdk/resourcemanager/devcenter"
     package-dir: "armdevcenter"
-    emitter-output-dir: "{output-dir}/{service-dir}/{package-dir}"
-    module: "github.com/Azure/azure-sdk-for-go/{service-dir}/{package-dir}"
+    emitter-output-dir: "{output-dir}/{service-dir}/armdevcenter"
+    module: "github.com/Azure/azure-sdk-for-go/{service-dir}/armdevcenter"
     fix-const-stuttering: true
     flavor: "azure"
     generate-samples: true
