--- a/specification/certificateregistration/resource-manager/Microsoft.CertificateRegistration/CertificateRegistration/suppressions.yaml
+++ b/specification/certificateregistration/resource-manager/Microsoft.CertificateRegistration/CertificateRegistration/suppressions.yaml
@@ -1,3 +1,3 @@
 - tool: TypeSpecRequirement
-  path: ./CertificateRegistration/stable/*/*.json
+  path: ./stable/*/*.json
   reason: "Suppressing TypeSpec requirement"
