--- a/specification/domainregistration/resource-manager/Microsoft.DomainRegistration/DomainRegistration/suppressions.yaml
+++ b/specification/domainregistration/resource-manager/Microsoft.DomainRegistration/DomainRegistration/suppressions.yaml
@@ -1,3 +1,3 @@
 - tool: TypeSpecRequirement
-  path: ./DomainRegistration/stable/*/*.json
+  path: ./stable/*/*.json
   reason: "Suppressing TypeSpec requirement"
