--- a/specification/web/resource-manager/Microsoft.Web/AppService/suppressions.yaml
+++ b/specification/web/resource-manager/Microsoft.Web/AppService/suppressions.yaml
@@ -1,3 +1,3 @@
 - tool: TypeSpecRequirement
-  path: ./AppService/stable/*/*.json
+  path: ./stable/*/*.json
   reason: "Suppressing TypeSpec requirement"
