--- a/specification/web/resource-manager/Microsoft.Web/AppService/suppressions.yaml
+++ b/specification/web/resource-manager/Microsoft.Web/AppService/suppressions.yaml
@@ -17,6 +17,9 @@
   path: ./stable/2018-02-01/*.json
   reason: "Suppressing TypeSpec requirement"
 - tool: TypeSpecRequirement
+  path: ./stable/2018-11-01/*.json
+  reason: "Suppressing TypeSpec requirement"
+- tool: TypeSpecRequirement
   path: ./stable/2019-08-01/*.json
   reason: "Suppressing TypeSpec requirement"
 - tool: TypeSpecRequirement
@@ -24,6 +27,9 @@
   reason: "Suppressing TypeSpec requirement"
 - tool: TypeSpecRequirement
   path: ./stable/2020-09-01/*.json
+  reason: "Suppressing TypeSpec requirement"
+- tool: TypeSpecRequirement
+  path: ./stable/2020-10-01/*.json
   reason: "Suppressing TypeSpec requirement"
 - tool: TypeSpecRequirement
   path: ./stable/2020-12-01/*.json
