--- a/specification/certificateregistration/resource-manager/Microsoft.CertificateRegistration/CertificateRegistration/suppressions.yaml
+++ b/specification/certificateregistration/resource-manager/Microsoft.CertificateRegistration/CertificateRegistration/suppressions.yaml
@@ -17,6 +17,9 @@
   path: ./stable/2020-09-01/*.json
   reason: "Suppressing TypeSpec requirement"
 - tool: TypeSpecRequirement
+  path: ./stable/2020-10-01/*.json
+  reason: "Suppressing TypeSpec requirement"
+- tool: TypeSpecRequirement
   path: ./stable/2020-12-01/*.json
   reason: "Suppressing TypeSpec requirement"
 - tool: TypeSpecRequirement
