--- a/specification/domainregistration/resource-manager/Microsoft.DomainRegistration/DomainRegistration/suppressions.yaml
+++ b/specification/domainregistration/resource-manager/Microsoft.DomainRegistration/DomainRegistration/suppressions.yaml
@@ -1,4 +1,7 @@
 - tool: TypeSpecRequirement
+  path: ./stable/2015-04-01/*.json
+  reason: "Suppressing TypeSpec requirement"
+- tool: TypeSpecRequirement
   path: ./stable/2015-08-01/*.json
   reason: "Suppressing TypeSpec requirement"
 - tool: TypeSpecRequirement
