--- a/specification/web/resource-manager/Microsoft.Web/AppService/suppressions.yaml
+++ b/specification/web/resource-manager/Microsoft.Web/AppService/suppressions.yaml
@@ -1,4 +1,7 @@
 - tool: TypeSpecRequirement
+  path: ./preview/2015-08-01-preview/*.json
+  reason: "Suppressing TypeSpec requirement"
+- tool: TypeSpecRequirement
   path: ./stable/2015-08-01/*.json
   reason: "Suppressing TypeSpec requirement"
 - tool: TypeSpecRequirement
