Adding emitter-output-dir

--- a/specification/monitor/Monitor.Query.Logs/tspconfig.yaml
+++ b/specification/monitor/Monitor.Query.Logs/tspconfig.yaml
@@ -24,6 +24,7 @@ options:
     flavor: azure
     namespace: azure.monitor.query
   "@azure-typespec/http-client-csharp":
+    emitter-output-dir: "{output-dir}/{service-dir}/{namespace}"
     package-name: "Azure.Monitor.Query.Logs"
     namespace: "{package-name}"
     generate-convenience-methods: true
