Adding clear-output-folder

--- a/specification/monitor/Monitor.Query.Logs/tspconfig.yaml
+++ b/specification/monitor/Monitor.Query.Logs/tspconfig.yaml
@@ -25,6 +25,7 @@ options:
     namespace: azure.monitor.query
   "@azure-typespec/http-client-csharp":
     emitter-output-dir: "{output-dir}/{service-dir}/{namespace}"
+    clear-output-folder: true
     package-name: "Azure.Monitor.Query.Logs"
     namespace: "{package-name}"
     generate-convenience-methods: true
