--- a/specification/compute/Compute.Management/tspconfig.yaml
+++ b/specification/compute/Compute.Management/tspconfig.yaml
@@ -1,3 +1,6 @@
+parameters:
+  "service-dir":
+    default: "sdk/compute"
 emit:
   - "@azure-tools/typespec-autorest"
 options:
@@ -7,6 +10,12 @@ options:
     output-file: "{azure-resource-provider-folder}/{service-name}/ComputeRP/{version-status}/{version}/ComputeRP.json"
     examples-dir: "{project-root}/examples"
     arm-resource-flattening: true
+  "@azure-tools/typespec-python":
+    package-dir: "azure-mgmt-compute"
+    namespace: "azure.mgmt.compute"
+    flavor: "azure"
+    generate-test: true
+    generate-sample: true
 linter:
   extends:
     - "@azure-tools/typespec-azure-rulesets/resource-manager"
