--- a/specification/powerplatform/resource-manager/Microsoft.PowerPlatform/PowerPlatform/suppressions.yaml
+++ b/specification/powerplatform/resource-manager/Microsoft.PowerPlatform/PowerPlatform/suppressions.yaml
@@ -1,3 +1,3 @@
 - tool: TypeSpecRequirement
-  path: ./preview/2020-10-30-preview/enterprisePolicy.json
-  reason: PowerPlatform not ready to migrate - no stable version
+  path: ./preview/2020-10-30-preview/*.json
+  reason: Brownfield service not ready to migrate
