--- a/specification/quota/Quota.Management/tspconfig.yaml
+++ b/specification/quota/Quota.Management/tspconfig.yaml
@@ -47,6 +47,7 @@ options:
     generate-fakes: true
     head-as-boolean: true
     inject-spans: true
+    factory-gather-all-params: false
 linter:
   extends:
     - "@azure-tools/typespec-azure-rulesets/resource-manager"
