add go module suffix (#36979)
* add go module suffix

* revert code

--- a/specification/fist/IotFirmwareDefense.Management/tspconfig.yaml
+++ b/specification/fist/IotFirmwareDefense.Management/tspconfig.yaml
@@ -30,7 +30,7 @@ options:
   "@azure-tools/typespec-go":
     service-dir: "sdk/resourcemanager/iotfirmwaredefense"
     emitter-output-dir: "{output-dir}/{service-dir}/armiotfirmwaredefense"
-    module: "github.com/Azure/azure-sdk-for-go/{service-dir}/armiotfirmwaredefense"
+    module: "github.com/Azure/azure-sdk-for-go/{service-dir}/armiotfirmwaredefense/v2"
     fix-const-stuttering: true
     flavor: "azure"
     generate-samples: true
