--- a/specification/standbypool/StandbyPool.Management/tspconfig.yaml
+++ b/specification/standbypool/StandbyPool.Management/tspconfig.yaml
@@ -43,7 +43,7 @@ options:
   "@azure-tools/typespec-go":
     service-dir: "sdk/resourcemanager/standbypool"
     emitter-output-dir: "{output-dir}/{service-dir}/armstandbypool"
-    module: "github.com/Azure/azure-sdk-for-go/{service-dir}/armstandbypool"
+    module: "github.com/Azure/azure-sdk-for-go/{service-dir}/armstandbypool/v2"
     fix-const-stuttering: true
     flavor: "azure"
     generate-samples: true
