--- a/specification/vmware/resource-manager/Microsoft.AVS/AVS/tspconfig.yaml
+++ b/specification/vmware/resource-manager/Microsoft.AVS/AVS/tspconfig.yaml
@@ -29,7 +29,7 @@ options:
   "@azure-tools/typespec-go":
     service-dir: "sdk/resourcemanager/avs"
     emitter-output-dir: "{output-dir}/{service-dir}/armavs"
-    module: "github.com/Azure/azure-sdk-for-go/{service-dir}/armavs"
+    module: "github.com/Azure/azure-sdk-for-go/{service-dir}/armavs/v2"
     fix-const-stuttering: true
     flavor: "azure"
     generate-samples: true
