--- a/specification/chaos/resource-manager/Microsoft.Chaos/Chaos/tspconfig.yaml
+++ b/specification/chaos/resource-manager/Microsoft.Chaos/Chaos/tspconfig.yaml
@@ -35,7 +35,7 @@ options:
   "@azure-tools/typespec-go":
     service-dir: "sdk/resourcemanager/chaos"
     emitter-output-dir: "{output-dir}/{service-dir}/armchaos"
-    module: "github.com/Azure/azure-sdk-for-go/{service-dir}/armchaos"
+    module: "github.com/Azure/azure-sdk-for-go/{service-dir}/armchaos/v2"
     fix-const-stuttering: true
     flavor: "azure"
     generate-samples: true
