--- a/specification/dashboard/Dashboard.Management/tspconfig.yaml
+++ b/specification/dashboard/Dashboard.Management/tspconfig.yaml
@@ -38,7 +38,7 @@ options:
   "@azure-tools/typespec-go":
     service-dir: "sdk/resourcemanager/dashboard"
     emitter-output-dir: "{output-dir}/{service-dir}/armdashboard"
-    module: "github.com/Azure/azure-sdk-for-go/{service-dir}/armdashboard"
+    module: "github.com/Azure/azure-sdk-for-go/{service-dir}/armdashboard/v2"
     fix-const-stuttering: true
     flavor: "azure"
     generate-samples: true
