keyvault, java, pin api-version to 7.6

--- a/specification/keyvault/Security.KeyVault.Certificates/tspconfig.yaml
+++ b/specification/keyvault/Security.KeyVault.Certificates/tspconfig.yaml
@@ -26,6 +26,7 @@ options:
     "namespace": "azure.keyvault.certificates._generated"
     "package-dir": "azure-keyvault-certificates"
   "@azure-tools/typespec-java":
+    api-version: "7.6"
     flavor: azure
     emitter-output-dir: "{output-dir}/{service-dir}/azure-security-keyvault-certificates"
     namespace: "com.azure.security.keyvault.certificates"
