--- a/specification/keyvault/Security.KeyVault.Administration/tspconfig.yaml
+++ b/specification/keyvault/Security.KeyVault.Administration/tspconfig.yaml
@@ -26,6 +26,7 @@ options:
     "namespace": "azure.keyvault.administration._generated"
     "package-dir": "azure-keyvault-administration"
   "@azure-tools/typespec-java":
+    api-version: "7.6"
     flavor: azure
     emitter-output-dir: "{output-dir}/{service-dir}/azure-security-keyvault-administration"
     namespace: "com.azure.security.keyvault.administration"
