--- a/specification/keyvault/Security.KeyVault.Keys/tspconfig.yaml
+++ b/specification/keyvault/Security.KeyVault.Keys/tspconfig.yaml
@@ -25,6 +25,7 @@ options:
     "namespace": "azure.keyvault.keys._generated"
     "package-dir": "azure-keyvault-keys"
   "@azure-tools/typespec-java":
+    api-version: "7.6"
     flavor: azure
     emitter-output-dir: "{output-dir}/{service-dir}/azure-security-keyvault-keys"
     namespace: "com.azure.security.keyvault.keys"
