--- a/specification/ai/data-plane/Azure.AI.Projects/preview/2025-10-15-preview/azure-ai-projects.json
+++ b/specification/ai/data-plane/Azure.AI.Projects/preview/2025-10-15-preview/azure-ai-projects.json
@@ -2354,7 +2354,7 @@
         "size"
       ]
     },
-    "ClusterInsights": {
+    "ClusterInsightResult": {
       "type": "object",
       "description": "Insights from the cluster analysis.",
       "properties": {
