--- a/specification/devcenter/DevCenter.Management/tspconfig.yaml
+++ b/specification/devcenter/DevCenter.Management/tspconfig.yaml
@@ -19,7 +19,7 @@ options:
     clear-output-folder: true
     flavor: "azure"
   "@azure-tools/typespec-python":
-    package-dir: "azure-mgmt-devcenter"
+    emitter-output-dir: "{output-dir}/{service-dir}/azure-mgmt-devcenter"
     namespace: "azure.mgmt.devcenter"
     generate-test: true
     generate-sample: true
@@ -33,7 +33,7 @@ options:
       - resource: Catalog
         collection: ProjectCatalogs
   "@azure-tools/typespec-ts":
-    package-dir: "arm-devcenter"
+    emitter-output-dir: "{output-dir}/{service-dir}/arm-devcenter"
     is-modular-library: true
     flavor: "azure"
     experimental-extensible-enums: true
@@ -41,7 +41,6 @@ options:
       name: "@azure/arm-devcenter"
   "@azure-tools/typespec-go":
     service-dir: "sdk/resourcemanager/devcenter"
-    package-dir: "armdevcenter"
     emitter-output-dir: "{output-dir}/{service-dir}/armdevcenter"
     module: "github.com/Azure/azure-sdk-for-go/{service-dir}/armdevcenter"
     fix-const-stuttering: true
