fix storage actions

--- a/specification/storageactions/StorageAction.Management/tspconfig.yaml
+++ b/specification/storageactions/StorageAction.Management/tspconfig.yaml
@@ -46,6 +46,7 @@ options:
     head-as-boolean: true
     inject-spans: true
   "@azure-typespec/http-client-csharp-mgmt":
+    emitter-output-dir: "{output-dir}/{service-dir}/{namespace}"
     package-name: "Azure.ResourceManager.StorageActions"
     namespace: "{package-name}"
 linter:
